# ADNAScan

./: .gitignore  AdapterRemoval.cpp  CMakeLists.txt  FastaSequences  FiberLoom.c  Makefile.in  PEAT Adapter Trimmer  README.md  ReadPair.cpp  ReadPair.h  ReadPair.hpp  RomanEmpire.c  SortingHat.c  StringTinder.c  StringTinder.cpp  StringTinder.hpp  Trying another approach  adapters.fasta  adna.cpp  adna.h  adna.hpp  adnascan.cpp  adnascan.hpp  adnashm.hpp  checker.cpp  color.c  color.h  color.hpp  config.h.in  configure.ac  fCompile.cpp  finder.cpp  init.cpp  main.cpp  main.hpp  makefile  mpiworld.cpp  mpiworld.hpp  outputFix.sh  qualTest.cpp  (+9 more)
depreciated/: FastaSequences.cpp  FastaSequences.h  PrintWorkThoughts  TestCodeC.cpp  adna.cpp  combine.sh  finder.cpp  finish.cpp  makefile  outputFix.sh  qualTest.cpp  run.sh  scanner.cpp  splitter.cpp
freeze/: ReadPair.cpp
neweradna/: CMakeLists.txt  StringTinder.cpp  StringTinder.hpp  adna.cpp  adna.hpp  color.hpp
oldadna/: ReadPair.cpp  adnashm.hpp  checker.cpp  forceremoveshm.cpp  run.sh
results/: adaptersRemoved
test/: adaptersIllumina.fa  test2.fastq  test_1.fastq  test_2.fastq
